Boxes retain aspect ratio

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
   	<script>
 		$(function() {
-			$( "#draggable" ).draggable({ snap: true }).resizable();;;
-			$( "#draggable2" ).draggable({ snap: true }).resizable();;
-			$( "#draggable3" ).draggable({ snap: true }).resizable();;
+			$( "#draggable" ).draggable({ snap: true }).resizable({ aspectRatio: true });;;
+			$( "#draggable2" ).draggable({ snap: true }).resizable({ aspectRatio: true });;
+			$( "#draggable3" ).draggable({ snap: true }).resizable({ aspectRatio: true });;
 		});
   	</script>
 
