--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             <!-- Menu -->
             <div class="Menu">
 
-
-                <div class="SqSum" id="SqSum">00</div>
-                <div class="TotalPrice" id="TotalPrice">00</div>
-
+                <div class="summary">
+                    <div class="SqSum" id="SqSum">00</div>
+                    <div class="TotalPrice" id="TotalPrice">00</div>
+                </div>
+                
             </div>
 
             <!-- Sandbox -->
