--- a/index.html
+++ b/index.html
@@ -29,20 +29,24 @@
             <!-- Sandbox -->
             <div class="sandbox" id="sandbox">
 
-                <div id="draggable" class="ui-widget-content">
+                <div id="draggable" class="drag ui-widget-content">
                     <p>Kitchen</p>
                     <div class="SqMeter" id="Kitchen">00</div>
                 </div>
 
-                <div id="draggable2" class="ui-widget-content" class="DragableClass">
+                <div id="draggable2" class="drag ui-widget-content">
                     <p>Living room</p>
                     <div class="SqMeter" id="Kitchen">00</div>
                 </div>
 
-                <div id="draggable3" class="ui-widget-content">
+                <div id="draggable3" class="drag ui-widget-content">
                     <p>Bedroom</p>
                     <div class="SqMeter" id="Kitchen">00</div>
                 </div>
+				
+				<div class="trash ui-widget-content">
+					trash
+				</div>
 
             </div>
 
