--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="SqSum" id="SqSum">00</div>
                     <div class="TotalPrice" id="TotalPrice">00</div>
                 </div>
-                
+
             </div>
 
             <!-- Sandbox -->
@@ -34,13 +34,13 @@
                     <div class="SqMeter" id="Kitchen">00</div>
                 </div>
 
-                <div id="draggable2" class="ui-widget-content" class="DragableClass">
-                    <p>Living room</p>
+                <div id="draggable2" class="ui-widget-content">
+                    <p>Kitchen</p>
                     <div class="SqMeter" id="Kitchen">00</div>
                 </div>
 
                 <div id="draggable3" class="ui-widget-content">
-                    <p>Bedroom</p>
+                    <p>Kitchen</p>
                     <div class="SqMeter" id="Kitchen">00</div>
                 </div>
 
