--- a/index.html
+++ b/index.html
@@ -30,18 +30,24 @@
             <div class="sandbox" id="sandbox">
 
                 <div id="draggable" class="drag ui-widget-content">
-                    <p>Kitchen</p>
-                    <div class="SqMeter" id="Kitchen">00</div>
+                    <div class="info">
+                        <p>Kitchen</p>
+                        <div class="SqMeter" id="Kitchen">00</div>
+                    </div>
                 </div>
 
                 <div id="draggable2" class="drag ui-widget-content">
-                    <p>Kitchen</p>
-                    <div class="SqMeter" id="Kitchen">00</div>
+                    <div class="info">
+                        <p>Kitchen</p>
+                        <div class="SqMeter" id="Kitchen">00</div>
+                    </div>
                 </div>
 
                 <div id="draggable3" class="drag ui-widget-content">
-                    <p>Kitchen</p>
-                    <div class="SqMeter" id="Kitchen">00</div>
+                    <div class="info">
+                        <p>Kitchen</p>
+                        <div class="SqMeter" id="Kitchen">00</div>
+                    </div>
                 </div>
 				
 				<div class="trash ui-widget-content">
