--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                     <div class="SqSum" id="SqSum">00</div>
                     <div class="TotalPrice" id="TotalPrice">00</div>
                 </div>
+				
+				<div id="add_kitchen">
+					add kitchen
+				</div>
                 
             </div>
 
@@ -51,6 +55,11 @@
             </div>
 
         </div>
+		
+		<div id="kitchen" class="drag ui-widget-content hideme">
+                    <p>Kitchen</p>
+                    <div class="SqMeter" id="Kitchen">00</div>
+                </div>
 
     </body>
 </html>
