--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
 
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/main.css" />
 
         <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
@@ -20,8 +21,8 @@
             <div class="Menu">
 
                 <div class="summary">
-                    <div class="SqSum" id="SqSum">00</div>
-                    <div class="TotalPrice" id="TotalPrice">00</div>
+                    <span class="SqSum" id="SqSum">00</span>
+                    <span class="TotalPrice" id="TotalPrice">00</span>
                 </div>
 
             </div>
@@ -31,22 +32,22 @@
 
                 <div id="draggable" class="drag ui-widget-content">
                     <div class="info">
-                        <p>Kitchen</p>
-                        <div class="SqMeter" id="Kitchen">00</div>
+                        <span class="SqSum" id="SqSum">00</span>
+                        <span class="TotalPrice" id="TotalPrice">00</span>
                     </div>
                 </div>
 
                 <div id="draggable2" class="drag ui-widget-content">
                     <div class="info">
-                        <p>Kitchen</p>
-                        <div class="SqMeter" id="Kitchen">00</div>
+                        <span class="SqSum" id="SqSum">00</span>
+                        <span class="TotalPrice" id="TotalPrice">00</span>
                     </div>
                 </div>
 
                 <div id="draggable3" class="drag ui-widget-content">
                     <div class="info">
-                        <p>Kitchen</p>
-                        <div class="SqMeter" id="Kitchen">00</div>
+                        <span class="SqSum" id="SqSum">00</span>
+                        <span class="TotalPrice" id="TotalPrice">00</span>
                     </div>
                 </div>
 				
