--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             <!-- Menu -->
             <div class="Menu">
 
+                <div id="controls">
+                    <div class="button add-kitchen">add kitchen</div>
+                    <div class="button add-livingroom">add living room</div>
+                </div>
+
                 <div class="summary">
                     <span class="SqSum" id="SqSum">00</span>
                     <span class="TotalPrice" id="TotalPrice">00</span>
