--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Sandbox -->
             <div class="sandbox" id="sandbox">
 
-                <div id="draggable" class="drag ui-widget-content">
+                <!--div id="draggable" class="drag ui-widget-content">
                     <p>Kitchen</p>
                     <div class="SqMeter" id="Kitchen">00</div>
                 </div>
@@ -50,7 +50,7 @@
 				
 				<div class="trash ui-widget-content">
 					trash
-				</div>
+				</div-->
 
             </div>
 
