--- a/index.html
+++ b/index.html
@@ -36,26 +36,13 @@
             <div class="sandbox" id="sandbox">
 
                 <div id="draggable" class="drag ui-widget-content">
+
                     <div class="info">
-                        <p>Kitchen</p>
-                        <p class="SqMeter" id="Kitchen">00</p>
+                        <span class="SqSum" id="SqSum">00</span>
+                        <span class="TotalPrice" id="TotalPrice">00</span>
                     </div>
                 </div>
 
-                <div id="draggable2" class="drag ui-widget-content">
-                    <div class="info">
-                        <p>Kitchen</p>
-                        <p class="SqMeter" id="Kitchen">00</p>
-                    </div>
-                </div>
-
-                <div id="draggable3" class="drag ui-widget-content">
-                    <div class="info">
-                        <p>Kitchen</p>
-                        <p class="SqMeter" id="Kitchen">00</p>
-                    </div>
-                </div>
-				
 				<div class="trash ui-widget-content">
 					trash
 				</div>
