--- a/index.html
+++ b/index.html
@@ -35,11 +35,15 @@
             <!-- Sandbox -->
             <div class="sandbox" id="sandbox">
 
-                <div id="draggable" class="drag ui-widget-content">
+                <div id="kitchen" class="drag ui-widget-content">
 
                     <div class="info">
-                        <span class="SqSum" id="SqSum">00</span>
-                        <span class="TotalPrice" id="TotalPrice">00</span>
+                        <div class="table">
+                            <div class="table-cell">
+                                <span>Kitchen</span>
+                                <span class="TotalPrice" id="TotalPrice">00</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
