--- a/index.html
+++ b/index.html
@@ -20,9 +20,25 @@
             <!-- Menu -->
             <div class="Menu">
 
+                <h2>My dream house project</h2>
+
                 <div id="controls">
-                    <div class="button add-kitchen">add kitchen</div>
-                    <div class="button add-livingroom">add living room</div>
+                    <div class="button add-kitchen">
+                        <span></span>
+                        <p>Kitchen</p>
+                    </div>
+                    <div class="button add-livingroom">
+                        <span></span>
+                        <p>Living room</p>
+                    </div>
+                    <div class="button add-bathroom">
+                        <span></span>
+                        <p>Bathroom</p>
+                    </div>
+                    <div class="button add-custom">
+                        <span></span>
+                        <p>Custom</p>
+                    </div>
                 </div>
 
                 <div class="summary">
