--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
             <!-- Sandbox -->
             <div class="sandbox" id="sandbox">
 
-                <div id="draggable" class="drag ui-widget-content">
+                <!--div id="draggable" class="drag ui-widget-content">
                     <div class="info">
                         <p>Kitchen</p>
                         <p class="SqMeter" id="Kitchen">00</p>
                     </div>
-                </div>
+                </div-->
 
-                <div id="draggable2" class="drag ui-widget-content">
+                <!--div id="draggable2" class="drag ui-widget-content">
                     <div class="info">
                         <p>Kitchen</p>
                         <p class="SqMeter" id="Kitchen">00</p>
                     </div>
-                </div>
+                </div-->
 
                 <div id="draggable3" class="drag ui-widget-content">
                     <div class="info">
