--- a/index.html
+++ b/index.html
@@ -20,25 +20,31 @@
             <!-- Menu -->
             <div class="Menu">
 
-                <h2>My dream house project</h2>
+                <div class="inside">
 
-                <div id="controls">
-                    <div class="button add-kitchen">
-                        <span></span>
-                        <p>Kitchen</p>
+                    <img id="logo" src="images/logo.png" />
+
+                    <h2>My dream house project</h2>
+
+                    <div id="controls">
+                        <div class="button add-kitchen">
+                            <span></span>
+                            <p>Kitchen</p>
+                        </div>
+                        <div class="button add-livingroom">
+                            <span></span>
+                            <p>Living room</p>
+                        </div>
+                        <div class="button add-bathroom">
+                            <span></span>
+                            <p>Bathroom</p>
+                        </div>
+                        <div class="button add-custom">
+                            <span></span>
+                            <p>Custom</p>
+                        </div>
                     </div>
-                    <div class="button add-livingroom">
-                        <span></span>
-                        <p>Living room</p>
-                    </div>
-                    <div class="button add-bathroom">
-                        <span></span>
-                        <p>Bathroom</p>
-                    </div>
-                    <div class="button add-custom">
-                        <span></span>
-                        <p>Custom</p>
-                    </div>
+
                 </div>
 
                 <div class="summary">
@@ -64,7 +70,7 @@
                 </div>
 
 				<div class="trash ui-widget-content">
-					trash
+					
 				</div>
 
             </div>
