Revert "Calculated size onload"
This reverts commit 9ccac2bf0812cc12b0d191573d2965a882754454.

Conflicts:
	index.html

--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
             <div class="sandbox" id="sandbox">
 
                 <div id="kitchen" class="drag ui-widget-content">
+                <div id="draggable" class="drag ui-widget-content draggable">
+                    <div class="info">
+                        <p>Kitchen</p>
+                        <p class="SqMeter" id="Kitchen">00</p>
+                    </div>
+                </div>
 
                     <div class="info">
                         <div class="table">
