--- a/index.html
+++ b/index.html
@@ -57,14 +57,7 @@
             <!-- Sandbox -->
             <div class="sandbox" id="sandbox">
 
-                <div id="kitchen" class="drag ui-widget-content">
-                <div id="draggable" class="drag ui-widget-content draggable">
-                    <div class="info">
-                        <p>Kitchen</p>
-                        <p class="SqMeter" id="Kitchen">00</p>
-                    </div>
-                </div>
-
+                <div id="kitchen" class="drag ui-widget-content draggable">
                     <div class="info">
                         <div class="table">
                             <div class="table-cell">
