--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
                     <h2>My dream house project</h2>
                     <div id="controls">
-                    <div class="button add-kitchen">add kitchen</div>
-                    <div class="button add-livingroom">add living room</div>
+
                         <div class="button add-kitchen">
                             <span></span>
                             <p>Kitchen</p>
@@ -51,6 +50,9 @@
                 <div class="summary">
                     <span class="SqSum" id="SqSum">00</span>
                     <span class="TotalPrice" id="TotalPrice">00</span>
+
+                    <a class="share" href="">Share your dream!</a>
+
                 </div>
 
             </div>
@@ -58,25 +60,12 @@
             <!-- Sandbox -->
             <div class="sandbox" id="sandbox">
 
-                <div id="draggable" class="drag ui-widget-content draggable">
+<!--                 <div id="kitchen" class="drag ui-widget-content draggable">
                     <div class="info">
                         <p>Kitchen</p>
                         <p class="SqMeter" id="Kitchen">00</p>
                     </div>
-                </div>
-                <div id="draggable2" class="drag ui-widget-content draggable">
-                    <div class="info">
-                        <p>Kitchen</p>
-                        <p class="SqMeter" id="Kitchen">00</p>
-                    </div>
-                </div>
-
-                <div id="draggable3" class="drag ui-widget-content draggable">
-                    <div class="info">
-                        <p>Kitchen</p>
-                        <p class="SqMeter" id="Kitchen">00</p>
-                    </div>
-                </div>
+                </div> -->
 				
 				<div class="trash ui-widget-content">
 					
