--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
 
                 <div class="summary">
-                    <span class="SqSum" id="SqSum">00</span>
+                    <span class="SqSum"i d="SqSum">00</span>
                     <span class="TotalPrice" id="TotalPrice">00</span>
 
                     <a class="share" href="">Share your dream!</a>
@@ -59,7 +59,7 @@
 
             <!-- Sandbox -->
             <div class="sandbox" id="sandbox">
-			
+			<div class="viewPane" id="viewPane" style="width:5000px; height:5000px; background-color: #ddd; margin-left: -2500px;  margin-top: -2500px;"> </div>
 				<div class="trash ui-widget-content">					
 				</div>
 
