--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             <!-- Sandbox -->
             <div class="sandbox" id="sandbox">
-			<div class="viewPane" id="viewPane" style="width:5000px; height:5000px; background-color: #ddd; margin-left: -2500px;  margin-top: -2500px;"> </div>
+			<div class="viewPane" id="viewPane" > </div>
 				<div class="trash ui-widget-content">					
 				</div>
 
