--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                             <span></span>
                             <p>Bathroom</p>
                         </div>
-                        <div class="button add-custom">
+                        <div class="button add-bedroom">
                             <span></span>
-                            <p>Custom</p>
+                            <p>Bedroom</p>
                         </div>
                     </div>
 
