--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 
                     <img id="logo" src="images/logo.png" />
 
-                    <h2>My dream house project</h2>
                     <div id="controls">
 						<div class="button add-kitchen">
                             <span></span>
@@ -48,10 +47,11 @@
                 </div>
 
                 <div class="summary">
+                    <h3>My dream house project</h3>
                     <span class="SqSum"id="SqSum">00</span>
                     <span class="TotalPrice" id="TotalPrice">00</span>
 
-                    <a class="share" href="">Send to architect</a>
+                    <a class="share" href="#">Send to architect</a>
 
                 </div>
 
@@ -66,8 +66,20 @@
 				</div>
 
             </div>
-
         </div>
+
+        <!-- Send to architect -->
+        <div id="send-project">
+            <div class="window">
+                <div class="close"></div>
+                <div class="inside biga">
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+                        Nam cursus. Morbi ut mi. Nullam enim leo, egestas id, condimentum at, laoreet mattis, massa.
+                         Sed eleifend nonummy diam.</p>
+                </div>
+            </div>
+        </div>
+
 
     </body>
 </html>
