--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 		<script src="http://jqueryrotate.googlecode.com/files/jQueryRotate.2.2.js" type="text/javascript"></script>
         <script src="Scripts.js"></script>
+        <script src="hammer.js"></script>
+        <script src="jquery.hammer.js"></script>
 
     </head>
 
