deleted aspect rato

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="Scripts.js"></script>
         <script src="hammer.js"></script>
         <script src="jquery.hammer.js"></script>
+        <script src="modernizr.js"></script>
 
     </head>
 
