--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/main.css" />
 
-        <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-        <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+        <script src="jquery-1.9.1.min.js"></script>
+        <script src="jquery-ui.js"></script>
 		<script src="http://jqueryrotate.googlecode.com/files/jQueryRotate.2.2.js" type="text/javascript"></script>
         <script src="Scripts.js"></script>
         <script src="hammer.js"></script>
@@ -82,7 +82,9 @@
                 </div>
             </div>
         </div>
-
+<input type="button" 
+  onClick="window.print()" 
+  value="Print This Page"/>
 
     </body>
 </html>
