--- a/index.html
+++ b/index.html
@@ -72,10 +72,21 @@
         <div id="send-project">
             <div class="window">
                 <div class="close"></div>
-                <div class="inside biga">
+                <div class="inside big">
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
                         Nam cursus. Morbi ut mi. Nullam enim leo, egestas id, condimentum at, laoreet mattis, massa.
                          Sed eleifend nonummy diam.</p>
+
+                    <div id="email">
+                        <form acdtion="">
+                            <div class="input">
+                                <input type="text" placeholder="Architect email" />
+                            </div>
+                            <div class="submit">
+                                <input type="submit" value="Send" />
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
