--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
                             <span></span>
                             <p>Bedroom</p>
                         </div>
+
+                        <div class="button add-garage">
+                            <span></span>
+                            <p>Garage</p>
+                        </div>
+
+                        <div class="button add-sauna">
+                            <span></span>
+                            <p>Sauna</p>
+                        </div>
+
                     </div>
 
                 </div>
