--- a/editor/editor.html
+++ b/editor/editor.html
@@ -14,6 +14,7 @@
         <script src="./hammer.js"></script>
         <script src="jquery.hammer.js"></script>
         <script src="modernizr.js"></script>
+        <script src="jquery.finger.js"></script>
 
     </head>
 
@@ -93,6 +94,15 @@
                 </div>
             </div>
         </div>
+<script>
+    $('.viewPane').on('tap', function() {
+        $(this).find('p').css('background', 'red');
 
+    });
+
+    $('body').on('tap', '.viewPane', function() {
+
+    });
+</script>
     </body>
 </html>
