--- a/Production/editor/editor.html
+++ b/Production/editor/editor.html
@@ -12,7 +12,7 @@
 		<script src="http://jqueryrotate.googlecode.com/files/jQueryRotate.2.2.js" type="text/javascript"></script>
         <script src="assets/scripts/Scripts.js"></script>
         <script src="assets/scripts/hammer.js"></script>
-        <script src="assets/scriptsjquery.hammer.js"></script>
+        <script src="assets/scripts/jquery.hammer.js"></script>
         <script src="assets/scripts/modernizr.js"></script>
 
     </head>
@@ -33,18 +33,39 @@
                             <span></span>
                             <p>Kitchen</p>
                         </div>
-                        <div class="button add-livingroom">
+                        <div class="button add-living-room has-sub">
                             <span></span>
                             <p>Living room</p>
+
+                            <ul class="sub-rooms" id="livingroom">
+                                <li class="add-livingroom-solo">Solo</li>
+                                <li class="add-livingroom-kitchen">With kitchen</li>
+                            </ul>
+
                         </div>
-                        <div class="button add-bathroom">
+
+                        <div class="button add-bathroom has-sub">
                             <span></span>
                             <p>Bathroom</p>
+
+                            <ul class="sub-rooms" id="bathroom">
+                                <li class="add-bathroom-shower">Shower</li>
+                                <li class="add-bathroom-bath">Bath</li>
+                            </ul>
+
                         </div>
-                        <div class="button add-bedroom">
+
+                        <div class="button add-bedroom has-sub">
                             <span></span>
                             <p>Bedroom</p>
+
+                            <ul class="sub-rooms" id="bedroom">
+                                <li class="add-bedroom-master">Master</li>
+                                <li class="add-bedroom-small">Small</li>
+                            </ul>
+
                         </div>
+
                         <div class="button add-garage">
                             <span></span>
                             <p>Garage</p>
