--- a/Production/editor/editor.html
+++ b/Production/editor/editor.html
@@ -15,6 +15,7 @@
         <script src="jquery.hammer.js"></script>
         <script src="modernizr.js"></script>
         <script src="jquery.finger.js"></script>
+        <script src="jquery.ui.touch-punch>"></script>
 
     </head>
 
@@ -94,15 +95,5 @@
                 </div>
             </div>
         </div>
-<script>
-    $('.viewPane').on('tap', function() {
-        $(this).find('p').css('background', 'red');
-
-    });
-
-    $('body').on('tap', '.viewPane', function() {
-
-    });
-</script>
     </body>
 </html>
