--- a/Production/editor/editor.html
+++ b/Production/editor/editor.html
@@ -15,7 +15,7 @@
         <script src="jquery.hammer.js"></script>
         <script src="modernizr.js"></script>
         <script src="jquery.finger.js"></script>
-        <script src="jquery.ui.touch-punch>"></script>
+        <script src="jquery.ui.touch-punch"></script>
 
     </head>
 
