--- a/Production/editor/editor.html
+++ b/Production/editor/editor.html
@@ -14,8 +14,7 @@
         <script src="./hammer.js"></script>
         <script src="jquery.hammer.js"></script>
         <script src="modernizr.js"></script>
-        <script src="jquery.finger.js"></script>
-        <script src="jquery.ui.touch-punch"></script>
+        <script src="touchpunch.js"></script>
 
     </head>
 
