--- a/editor/editor.html
+++ b/editor/editor.html
@@ -7,14 +7,14 @@
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/main.css" />
 
-        <script src="jquery-1.9.1.min.js"></script>
-        <script src="jquery-ui.js"></script>
-		<script src="http://jqueryrotate.googlecode.com/files/jQueryRotate.2.2.js" type="text/javascript"></script>
+<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
+<script src="https://raw.github.com/furf/jquery-ui-touch-punch/master/jquery.ui.touch-punch.min.js"></script>
+
+
         <script src="./Scripts.js"></script>
-        <script src="./hammer.js"></script>
-        <script src="jquery.hammer.js"></script>
-        <script src="modernizr.js"></script>
-        <script src="touchpunch.js"></script>
+
+        
 
     </head>
 
