--- a/Production/editor/editor.html
+++ b/Production/editor/editor.html
@@ -11,7 +11,7 @@
     <script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
 <script src="https://raw.github.com/furf/jquery-ui-touch-punch/master/jquery.ui.touch-punch.min.js"></script>
 
-
+		<script src="http://jqueryrotate.googlecode.com/files/jQueryRotate.2.2.js" type="text/javascript"></script>
         <script src="./Scripts.js"></script>
 
         
