--- a/Production/index.html
+++ b/Production/index.html
@@ -16,7 +16,7 @@
 		<div id="header">
 			<div class="table">
 				<div class="table-cell">
-					<img src="assets/images/logo.png">
+					<img id="logo" src="assets/images/logo.png">
 				</div>
 			</div>
 
@@ -60,6 +60,7 @@
 					</div>
 
 					<div id="social">
+						<p>Share pleas:</p>
 						<a class="twitter" href=""></a>
 						<a class="facebook" href=""></a>
 					</div>
