--- a/Production/index.html
+++ b/Production/index.html
@@ -4,10 +4,27 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, maximum-scale=1, minimum-scale=1" />
 		<title>visand</title>
+		<meta name= "description" content= "This is the description" />
+
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="assets/css/main.css" />
-		<script type="text/javascript" src="assets/scripts/jquery-1.9.1.min.js"></script>
-		<script type="text/javascript" src="assets/scripts/main.js"></script>
+
+		<!-- OG Facebook -->
+		<meta property="og:type" content="website"/>
+		<meta property="og:site_name" content="Visand"/>
+		<meta property="og:title" content="Visand"/>
+		<meta property="og:url" content="http://www.visand.eu/"/>
+		<meta property="og:description" content="Letting your client interact with their dream house has never been easier - just drag and drop and go. It is a powertool for architects, that helps to fasten the workflow and save money."/>
+		<meta property="og:image" content="http://www.visand.eu/assets/images/og-logo.png"/>
+
+		<!-- OG Twitter -->
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:site" content="@visandvisual">
+		<meta name="twitter:title" content="Visand">
+		<meta name="twitter:description" content="Letting your client interact with their dream house has never been easier - just drag and drop and go. It is a powertool for architects, that helps to fasten the workflow and save money.">
+		<meta name="twitter:creator" content="@visandvisual">
+		<meta name="twitter:image:src" content="http://www.visand.eu/assets/images/og-logo.png">
+		<meta name="twitter:domain" content="http://www.visand.eu">
 
 	</head>
 
@@ -17,6 +34,7 @@
 			<div class="table">
 				<div class="table-cell">
 					<img id="logo" src="assets/images/logo.png">
+					<span id="slogan">The powertool for architects</span>
 				</div>
 			</div>
 
@@ -26,7 +44,7 @@
 
 			<div id="get-now">
 				<div class="wrapper">
-					<h1>Designing your dream house has never been easier - just drag and drop and go!</h1>
+					<h1>LETTING YOUR CLIENT INTERACT WITH THEIR DREAM HOUSE HAS NEVER BEEN EASIER - JUST DRAG AND DROP AND GO!</h1>
 					<a class="try" href="editor/editor.html">Try it now!</a>
 				</div>
 			</div>
@@ -35,39 +53,44 @@
 				<div class="wrapper">
 
 					<div class="item">
-						<h2>PLAN & DESIGN</h2>
-						<p>Visand will be usable from computers and tablets without the need to install an app or plugin - all You need is an imagination and a web browser.</p>
+						<h2>MORE SATISFIED CLIENTS</h2>
+						<p>Let the client play in simple drag and drop environment, to find out their expectations and budget. Client's commitment in the very beginning means less changes in later stages.</p>
+					</div>
+
+					<div class="item">
+						<h2>SAVE TIME & MONEY</h2>
+						<p>Now you know what the client REALLY wants. That helps you to write risk free contracts, manage a faster workflow and save time and money.</p>
 					</div>
 
 					<div class="item">
 						<h2>PLAN & DESIGN</h2>
-						<p>Visand will be usable from computers and tablets without the need to install an app or plugin - all You need is an imagination and a web browser.</p>
-					</div>
-
-					<div class="item">
-						<h2>PLAN & DESIGN</h2>
-						<p>Visand will be usable from computers and tablets without the need to install an app or plugin - all You need is an imagination and a web browser.</p>
+						<p>Visand will be usable from computers and tablets without the need to install an app or plugin - all Your client needs is an imagination and a web browser.</p>
 					</div>
 
 				</div>
 			</div>
 
-			<div id="footer">
-				<div class="wrapper">
+			<div class="wrapper">
+				<div id="footer">
 
 					<div id="copyright">
 						<p>© Visand 2013
 					</div>
 
 					<div id="social">
-						<p>Share pleas:</p>
-						<a class="twitter" href=""></a>
-						<a class="facebook" href=""></a>
+						<p>Share it!</p>
+						<a class="twitter addthis_button_twitter" href=""></a>
+						<a class="facebook addthis_button_facebook" href=""></a>
 					</div>
+
 				</div>
 			</div>
 
 		</div>
+
+		<script type="text/javascript" src="assets/scripts/jquery-1.9.1.min.js"></script>
+		<script type="text/javascript" src="assets/scripts/main.js"></script>
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=undefined"></script>
 
 	</body>
 
