--- a/Production/index.html
+++ b/Production/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, maximum-scale=1, minimum-scale=1" />
-		<title>VISAND</title>
+		<title>VISAND - The powertool for architects</title>
 		<meta name= "description" content= "This is the description" />
 
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
@@ -74,7 +74,8 @@
 				<div id="footer">
 
 					<div id="copyright">
-						<p>© Visand 2013
+						<p>© Visand 2013</p>
+						<a href="mailto:info@visand.eu">info@visand.com</a>
 					</div>
 
 					<div id="social">
