--- a/Production/editor/editor.html
+++ b/Production/editor/editor.html
@@ -71,7 +71,7 @@
 
                         <div class="button add-garage">
                             <span></span>
-                            <p>Garage</p>
+                            <p>Garage48</p>
                         </div>
                         <div class="button add-sauna">
                             <span></span>
