--- a/Production/index.html
+++ b/Production/index.html
@@ -31,6 +31,7 @@
 	<body>
 
 		<div id="header">
+
 			<div class="table">
 				<div class="table-cell">
 					<img id="logo" src="assets/images/logo.png">
@@ -75,7 +76,7 @@
 
 					<div id="copyright">
 						<p>© Visand 2013</p>
-						<a href="mailto:info@visand.eu">info@visand.com</a>
+						<a href="mailto:info@visand.eu">info@visand.eu</a>
 					</div>
 
 					<div id="social">
